# SyncCraft

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: binary-build.yml  ci.yml  package-artifacts.yml  release-gate.yml
docs/: api-keys.md  architecture.md  config.examples.yaml  installation.md  skill-installation-report.md  tutorial.md
docs/releases/: 1.0.0.md
scripts/: check_changed_behavior_has_tests.py
synccraft/: __init__.py  __main__.py  chunking.py  cli.py  config.py  errors.py  media.py  output.py  provider.py  templating.py
tests/contract/: test_provider_adapter.py
tests/fixtures/provider/: success.json
tests/integration/: test_chunking_execution.py  test_cli.py
tests/unit/: test_chunking.py  test_cli_and_output.py  test_config_merge.py  test_config_typed.py  test_errors.py  test_provider_omni.py  test_template.py
