[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synccraft"
version = "1.0.0"
description = "SyncCraft CLI utilities"
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "SyncCraft contributors" },
]
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Environment :: Console",
  "Topic :: Multimedia :: Sound/Audio",
]

[project.scripts]
synccraft = "synccraft.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "twine>=5.1.1",
]

[tool.pytest.ini_options]
addopts = "-q --cov=synccraft --cov-report=term-missing --cov-fail-under=85"
required_plugins = [
  "pytest-cov>=5.0",
]
testpaths = ["tests"]
markers = [
  "unit: fast pure-logic tests; mandatory for each PR",
  "integration: CLI/filesystem integration tests; mandatory before release merge",
  "contract: provider adapter contract tests",
]
